--- a/Narrativa/Config/DefaultEngine.ini
+++ b/Narrativa/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AssetsvilleTown/Maps/MainScene.MainScene
+EditorStartupMap=/Game/MainMenu/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/AssetsvilleTown/Maps/MainScene.MainScene
+GameDefaultMap=/Game/MainMenu/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/MainCharacter/MainGM.MainGM_C
 GlobalDefaultServerGameMode=None
